@@ -16,8 +16,23 @@
 -XX:MaxDirectMemorySize
 -XX:MinMetaspaceFreeRatio
 -XX:MaxMetaspaceFreeRatio
+-XX:ParallelGCThreads
+	* 设置 ParNew 收集器的收集线程数量
 
 -XX:+HeapDumpOnOutOfMemoryError
 -XX:+PrintGCDetails
 -XX:+TraceClassLoading
 -XX:+TraceClassUnLoading
+
+
+-XX:SurvivorRatio
+-XX:PretenureSizeThreshold
+-XX:HandlePromotionFailure
+
+-XX:+UseConMarkSweepGC
+	* 使用Concurrent Mark Sweep(CMS)作为老年代收集器
+	* 如果使用该参数, 默认就会使用: ParNew 作为新生代的收集器
+
+-XX:+UseParNewGC
+	* 强制系统使用 ParNew 作为新生代的收集器
+
